--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/mariessad/Project_3_MERN#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.5.0",
     "dotenv": "^16.0.3",
